Update to Weather Underground
changed basic structure

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
     <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+            <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -48,20 +48,14 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
+            <li><a href="http://www.wunderground.com/personal-weather-station/dashboard?ID=IHATFIEL11" target="_new">WEATHER</a></li>
             <li><a href="http://cmsphoto.co.uk">CMS Photography</a></li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="http://blog.cmsphoto.co.uk">BLOG</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="cam/webcam.php">WEBCAM</a></li>
-              </ul>
-            </li>
+            <li><a href="http://blog.cmsphoto.co.uk">BLOG</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
 	<!-- *****************************************************************************************************************
 	 BLUE WRAP
 	 ***************************************************************************************************************** -->
@@ -78,30 +72,16 @@
 	 AGENCY ABOUT
 	 ***************************************************************************************************************** -->
 
-	 <div class="container mtb">
-	 	<div class="row">
-	 		<div class="col-lg-6">
-	 			<img class="img-responsive" src="assets/img/agency.jpg" alt="">
-	 		</div>
-	 		
-	 		<div class="col-lg-6">
-		 		<h4>About Me</h4>
-		 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
- 				<p><br/><a href="contact.html" class="btn btn-theme">Contact Us</a></p>
-	 		</div>
-	 	</div><! --/row -->
-	 </div><! --/container -->
-
 	<!-- *****************************************************************************************************************
 	 TEEAM MEMBERS
 	 ***************************************************************************************************************** -->
 
 	 <div class="container mtb">
 	 	<div class="row centered">
-		 	<h3 class="mb">BIO/h3>
+		 	<h3 class="mb">
 		 	<div class="col-lg-3 col-md-3 col-sm-3">
 				<div class="he-wrap tpl6">
-				<img src="g" alt="">
+				<img src="assets/img/profile.jpg" alt="CMS Profile Pic">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
                             <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
@@ -111,8 +91,7 @@
 					</div><!-- he view -->		
 				</div><!-- he wrap -->
 				<h4>Chris Masterton-Smith</h4>
-				<h5 class="ctitle">Something</h5>
-				<p>Somethign more</p>
+				<h5 class="ctitle">FinTech Product Owner</h5>
 				<div class="hline"></div>
 		 	</div><! --/col-lg-3 -->	 	
 		 	
