--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>mastertonsmiht.uk</title>
+    <title>mastertonsmith.uk</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -48,34 +48,33 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
+            <li><a href="http://www.wunderground.com/personal-weather-station/dashboard?ID=IHATFIEL11" target="_new">WEATHER</a></li>
             <li><a href="http://cmsphoto.co.uk">CMS Photography</a></li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="http://blog.cmsphoto.co.uk">BLOG</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="cam/webcam.php">WEBCAM</a></li>
-              </ul>
-            </li>
+            <li><a href="http://blog.cmsphoto.co.uk">BLOG</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
-
-	<!-- *****************************************************************************************************************
-	 HEADERWRAP
-	 ***************************************************************************************************************** -->
-	<div id="headerwrap">
+	<div id="blue">
 	    <div class="container">
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2">
-					<h3>Endymion				
-				</div>
+				<h3>Home</h3>
 			</div><!-- /row -->
 	    </div> <!-- /container -->
-	</div><!-- /headerwrap -->
+	</div><!-- /blue -->
 
+	 <div class="container mtb">
+	 	<div class="row">
+	 		<div class="col-lg-6">
+				<a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=IHATFIEL11"><img src="http://banners.wunderground.com/cgi-bin/banner/ban/wxBanner?bannertype=wxstnsticker_both&weatherstationcount=IHATFIEL11" height="160" width="160" border="0" alt="Weather Underground PWS IHATFIEL11" /></a>
+	 		</div>
+	 		<div class="col-lg-6">
+	 			<img src="images/latest.jpg" class="img-thumbnail"></img>
+	 		</div>	 
+	 	</div>
+	 </div>
 	<!-- *****************************************************************************************************************
 	 FOOTER
 	 ***************************************************************************************************************** -->
